syntax = "proto3";

package yandex.cloud.priv.marketplace.licenseserver.v1.license.console;

import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";
import "yandex/cloud/priv/marketplace/licenseserver/v1/license/lock.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/licenseserver/v1/license/console;console";
option java_package = "CLS";

service LockService {
    rpc Get(GetLockRequest) returns (Lock);

    rpc Create(CreateLockRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "CreateLockMetadata"
            response: "Lock"
        };
    }

    rpc Release(ReleaseLockRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "ReleaseLockMetadata"
            response: "Lock"
        };
    }
}

message GetLockRequest {
    string instance_id = 1 [(required) = true];
}

message CreateLockRequest {
    string instance_id = 1 [(required) = true];
    string resource_lock_id = 2 [(required) = true];
}

message CreateLockMetadata {
    string lock_id = 1;
}

message ReleaseLockRequest {
    string instance_id = 1 [(required) = true];
    string resource_lock_id = 2 [(required) = true];
}

message ReleaseLockMetadata {
    string lock_id = 1;
}
